# openpub-py

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/openpub/: __init__.py  __main__.py  cli.py  comparison.py  init_cmd.py  registry.py  verify_cmd.py
tests/: conftest.py  test_cli.py  test_comparison.py  test_init_cmd.py  test_registry.py  test_verify_cmd.py
tests/fixtures/: claims.json
