[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openpub"
version = "0.1.0"
description = "Verify scientific paper claims with code"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
openpub = "openpub.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/openpub"]
